test/errors/type/str/endswith3.yasl
mt.lookup('', .endswith)(.str, true)
